lowered code to java 8